# bolide-fitness

./: CMakeLists.txt  asteroid-workout.desktop.template  asteroid-workout.in  bolide-fitness.desktop.template  bolide-fitness.in
configs/metrics/: cycling.json  health_wellness.json  performance_training.json  running.json  scientific.json
configs/navigation/: default_layout.json
configs/screens/: default_elevation.json  default_gps.json  default_hr.json  default_timer.json
configs/workouts/: cycling.json  hike.json  indoor_run.json  other.json  outdoor_run.json  strength.json  swimming.json  treadmill.json  ultra_hike.json  yoga.json
i18n/: asteroid-workout.desktop.h  bolide-fitness.desktop.h
src/: CMakeLists.txt  main.cpp  resources.qrc  workoutcontroller.cpp  workoutcontroller.h
src/companion/: companionservice.cpp  companionservice.h  gadgetbridgesync.cpp  gadgetbridgesync.h  metricsbroadcaster.cpp  metricsbroadcaster.h
src/core/: database.cpp  database.h  datapipeline.cpp  datapipeline.h  glanceprovider.cpp  glanceprovider.h  metricsengine.cpp  metricsengine.h  pluginregistry.cpp  pluginregistry.h  ringbuffer.h  screenregistry.cpp  screenregistry.h  sensorservice.cpp  sensorservice.h
src/domain/: bodymetrics.cpp  bodymetrics.h  readinessscore.cpp  readinessscore.h  sensorslabmanager.cpp  sensorslabmanager.h  sleeptracker.cpp  sleeptracker.h  trendsmanager.cpp  trendsmanager.h  workoutmanager.cpp  workoutmanager.h
src/export/: bletransport.cpp  bletransport.h  exportmanager.cpp  exportmanager.h  exportplugin.h  fitexporter.cpp  fitexporter.h  gpxexporter.cpp  gpxexporter.h  tcxexporter.cpp  tcxexporter.h
src/metrics/: calorieestimate.cpp  calorieestimate.h  hillscore.cpp  hillscore.h  hrvmetrics.cpp  hrvmetrics.h  metricplugin.h  trainingmetrics.h  vo2maxestimate.cpp  vo2maxestimate.h
src/metrics-plugin/: CMakeLists.txt  metricsclient.cpp  metricsclient.h  plugin.cpp  qmldir
src/ml/: builtinmodels.cpp  builtinmodels.h  mlplugin.h  mlregistry.cpp  mlregistry.h
src/qml/: AllWorkoutsPage.qml  BodyMetricsPage.qml  DataScreenElevation.qml  DataScreenGPS.qml  DataScreenHR.qml  DataScreenTimer.qml  DetailView.qml  FolderGlance.qml  ReadinessPage.qml  SensorsLabPage.qml  SettingsPage.qml  SleepPage.qml  TrendsPage.qml  WorkoutActivePage.qml  WorkoutFolderPage.qml  WorkoutListPage.qml  WorkoutSettingsPage.qml  WorkoutStartPage.qml  main.qml
src/qml/components/: DataField.qml  GraphWidget.qml  MetricCard.qml  ScreenGlance.qml
tests/: CMakeLists.txt  test_bodymetrics.cpp  test_companion.cpp  test_datapipeline.cpp  test_export.cpp  test_hillscore.cpp  test_mlregistry.cpp  test_readiness.cpp  test_ringbuffer.cpp  test_sensorslab.cpp  test_sleeptracker.cpp  test_trendsmanager.cpp
